remove files not used and add more examples

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"car_data.csv\")\n",
+    "df = pd.read_csv(\"dataset_cars.csv\")\n",
     "\n",
     "# mostrando as primeiras linhas do arquivo.\n",
     "df.head()"
