--- a/logistic_regression.ipynb
+++ b/logistic_regression.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('diabetes.csv')"
+    "df = pd.read_csv('dataset_diabetes.csv')"
    ]
   },
   {
@@ -524,7 +524,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 1 1 0 0 0 0 0 0]\n"
+      "[0 0 1 0 1 1 0 1 0 0]\n"
      ]
     }
    ],
@@ -543,7 +543,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83.11688311688312\n"
+      "74.02597402597402\n"
      ]
     }
    ],
