--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -3,166 +3,173 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "import numpy as np"
-   ]
+    "from tensorflow import keras"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "source": [
+    "fashion_mnist = keras.datasets.fashion_mnist\n",
+    "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
+   ],
+   "outputs": [],
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": [
-    "fashion_mnist = keras.datasets.fashion_mnist\n",
-    "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "source": [
+    "train_images.shape"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(60000, 28, 28)"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
-   "source": [
-    "train_images.shape"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "source": [
+    "len(train_labels)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "60000"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
-   "source": [
-    "len(train_labels)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "source": [
+    "np.unique(train_labels)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9], dtype=uint8)"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
-   "source": [
-    "np.unique(train_labels)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "source": [
+    "test_images.shape"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(10000, 28, 28)"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "test_images.shape"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "source": [
+    "len(test_labels)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "10000"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
-   "source": [
-    "len(test_labels)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "source": [
+    "test_labels"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([9, 2, 1, ..., 8, 1, 5], dtype=uint8)"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 8
     }
    ],
-   "source": [
-    "test_labels"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "train_images = train_images / 255.0\n",
     "test_images = test_images / 255.0"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "source": [
+    "model = keras.Sequential([\n",
+    "    keras.layers.Flatten(input_shape=(28, 28)),\n",
+    "    keras.layers.Dense(128, activation=tf.nn.relu),\n",
+    "    keras.layers.Dense(10, activation=tf.nn.softmax)\n",
+    "])\n",
+    "model.summary()"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
@@ -181,237 +188,181 @@
      ]
     }
    ],
-   "source": [
-    "model = keras.Sequential([\n",
-    "    keras.layers.Flatten(input_shape=(28, 28)),\n",
-    "    keras.layers.Dense(128, activation=tf.nn.relu),\n",
-    "    keras.layers.Dense(10, activation=tf.nn.softmax)\n",
-    "])\n",
-    "model.summary()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "model.compile(optimizer='adam', \n",
+    "model.compile(optimizer='adam',\n",
     "              loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "source": [
+    "model.fit(train_images, train_labels, epochs=5)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Epoch 1/5\n",
-      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.5033 - accuracy: 0.8228\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.4952 - accuracy: 0.8268\n",
       "Epoch 2/5\n",
-      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.3763 - accuracy: 0.8649\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.3713 - accuracy: 0.8655\n",
       "Epoch 3/5\n",
-      "1875/1875 [==============================] - 2s 872us/step - loss: 0.3362 - accuracy: 0.8774\n",
+      "1875/1875 [==============================] - 2s 1ms/step - loss: 0.3354 - accuracy: 0.8777\n",
       "Epoch 4/5\n",
-      "1875/1875 [==============================] - 2s 886us/step - loss: 0.3115 - accuracy: 0.8866\n",
+      "1875/1875 [==============================] - 3s 1ms/step - loss: 0.3118 - accuracy: 0.8859\n",
       "Epoch 5/5\n",
-      "1875/1875 [==============================] - 2s 874us/step - loss: 0.2959 - accuracy: 0.8917\n"
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2913 - accuracy: 0.8923\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x216f2b9b160>"
+       "<tensorflow.python.keras.callbacks.History at 0x1c930f51790>"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
-   "source": [
-    "model.fit(train_images, train_labels, epochs=5)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "source": [
+    "test_loss, test_acc = model.evaluate(test_images, test_labels)\r\n",
+    "print('Test accuracy:', test_acc)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "313/313 [==============================] - 0s 870us/step - loss: 0.3547 - accuracy: 0.8737\n",
-      "Test accuracy: 0.8737000226974487\n"
+      "313/313 [==============================] - 0s 1ms/step - loss: 0.3511 - accuracy: 0.8773\n",
+      "Test accuracy: 0.8773000240325928\n"
      ]
     }
    ],
-   "source": [
-    "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
-    "print('Test accuracy:', test_acc)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "predictions = model.predict(test_images)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([4.5442152e-07, 5.9056923e-08, 1.1188858e-07, 4.5960316e-09,\n",
-       "       3.3756925e-07, 4.0376056e-02, 4.9233654e-07, 6.1504249e-02,\n",
-       "       2.8247799e-05, 8.9809000e-01], dtype=float32)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "predictions[0]"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1.8611423e-05, 4.2095922e-07, 9.5550956e-07, 5.0182184e-08,\n",
+       "       5.7248244e-06, 1.5842440e-03, 2.6654231e-04, 4.1196171e-02,\n",
+       "       4.9561759e-06, 9.5692235e-01], dtype=float32)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "source": [
+    "np.argmax(predictions[0])"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "9"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 16
     }
    ],
-   "source": [
-    "np.argmax(predictions[0])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "source": [
+    "test_labels[0]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "9"
       ]
      },
-     "execution_count": 17,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 17
     }
    ],
-   "source": [
-    "test_labels[0]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 18,
+   "source": [
+    "img = test_images[0]\r\n",
+    "print(img.shape)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "(28, 28)\n"
      ]
     }
    ],
-   "source": [
-    "img = test_images[0]\n",
-    "\n",
-    "print(img.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 1, 28, 28)\n"
-     ]
-    }
-   ],
-   "source": [
-    "img = (np.expand_dims(img,0))\n",
-    "\n",
-    "print(img.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Model was constructed with shape (None, 28, 28) for input KerasTensor(type_spec=TensorSpec(shape=(None, 28, 28), dtype=tf.float32, name='flatten_input'), name='flatten_input', description=\"created by layer 'flatten_input'\"), but it was called on an input with incompatible shape (None, 1, 28, 28).\n",
-      "[[4.5442152e-07 5.9056923e-08 1.1188858e-07 4.5960227e-09 3.3756925e-07\n",
-      "  4.0376045e-02 4.9233654e-07 6.1504234e-02 2.8247796e-05 8.9809000e-01]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictions_single = model.predict(img)\n",
-    "\n",
-    "print(predictions_single)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.argmax(predictions_single[0])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [
+    "predictions_single = model.predict(img)\r\n",
+    "print(predictions_single)"
+   ],
    "outputs": [],
-   "source": []
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "np.argmax(predictions_single[0])"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -435,15 +386,15 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "metadata": {
-     "collapsed": false
-    },
     "source": [
      "# coding: utf-8\n",
      "\n",
      "# <img src='tensor.png'>\n",
      "# <img src='parcs.png'>\n"
-    ]
+    ],
+    "metadata": {
+     "collapsed": false
+    }
    }
   }
  },
