--- a/mlp.ipynb
+++ b/mlp.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "#### Modelo de McCulloch-Pitts (1943) inspirado no neurônio biológico\n",
     "\n",
-    "<img src='mlp.png'>"
+    "<img src = 'mlp.png'>"
    ]
   },
   {
@@ -28,10 +28,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.datasets import load_boston\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.datasets import load_boston"
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X,y = load_boston(return_X_y=True)"
+    "X, y = load_boston(return_X_y=True)"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X,y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mlp = MLPRegressor(hidden_layer_sizes=(100,100,50,50),max_iter=1000)"
+    "mlp = MLPRegressor(hidden_layer_sizes=(100, 100, 50, 50), max_iter=1000)"
    ]
   },
   {
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "mlp.fit(X_train,y_train)"
+    "mlp.fit(X_train, y_train)"
    ]
   },
   {
@@ -100,7 +100,7 @@
     {
      "data": {
       "text/plain": [
-       "0.902754927831391"
+       "0.8965017996463249"
       ]
      },
      "execution_count": 7,
@@ -109,7 +109,7 @@
     }
    ],
    "source": [
-    "mlp.score(X_test,y_test)"
+    "mlp.score(X_test, y_test)"
    ]
   }
  ],
